cilium/extra-manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    protocol: HTTPS
    #port: ${gateway_nodeport}
    port: 30443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
      - kind: Secret
        name: default-tls-cert
